# mock-interview-assignment

./: README.md  justfile  mkdocs.yaml  pyproject.toml
docs/: design.md  introduction.md
docs/api/: kb.md
scripts/: embedding.py
src/: app.py  schema.py
src/knowledge_base/: exception.py  manager.py  schema.py  type.py
tests/integration/: test_kb_routers.py
tests/unit/: test_kb_manager.py
